syntax = "proto3";
package project;

service ProjectService {
  rpc FindOne (ProjectById) returns (ProjectResponse) {}
  rpc FindAll (Empty) returns (ProjectsResponse) {}
}

message ProjectById {
  int32 id = 1;
}

message ProjectResponse {
  int32 id = 1;
  string name = 2;
}

message ProjectsResponse {
  repeated ProjectResponse projects = 1;
}

message Empty {

}
